--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 node_js:
   - "node"
+services: mongodb
 deploy:
   provider: heroku
   api_key: "2d789620-e3f1-4d81-a4ea-f79cc5d54c76"
