--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Joe Turner <jturner@thinkful.com>",
   "license": "MIT",
   "dependencies": {
+    "agenda": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
@@ -22,12 +23,14 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "knex": "^0.14.4",
+    "moment": "^2.22.2",
     "mongoose": "^5.0.6",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "pg": "^7.4.1"
+    "pg": "^7.4.1",
+    "react-big-scheduler": "^0.2.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
